--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,22 +33,39 @@ body {
 /*-- MENU --*/
 
 .styleMenuPrincipal {
-  background-color: #2f306f;
+  background-color: #ffffff;
+  padding-top: 13px;
+  -webkit-box-shadow: 0px 7px 8px 2px rgba(0,0,0,0.15);
+-moz-box-shadow: 0px 7px 8px 2px rgba(0,0,0,0.15);
+box-shadow: 0px 7px 8px 2px rgba(0,0,0,0.15);
 }
 
 .styleMenuPrincipal_titulo {
   font-size: 23px;
 }
 
-.styleMenuPrincipal_input {
-  width: 100%;
-  margin: 2px;
-  font-style: italic;
+.styleMenuPrincipalBotaoPesquisar{
+  background-color: white; 
+  height: 40px;
+  border-color: #f0f0f0;
+}
+.styleMenuPrincipalBotaoPesquisar:hover{
+  background-color: #fffafa; 
+  height: 40px;
+  border-color: #f0f0f0;
 }
 
-.styleMenuPrincipal_button {
+.styleMenuPrincipalBotaoCadastrar{
   background-color: red;
-  padding-top: 10px;
+   margin-bottom: 10px;
+    height: 40px;
+     font-size: 16px;
+      color: white;
+       font-weight: bold;
+        float: right;
+          border-radius: 6px;
+           width: 100%;
+            font-family: arial;
 }
 
 /*--x MENU x--*/
